# MuxKit.AudioSet.IO

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
2.8k_20cls_balanced/: Type.yaml  count_summary.csv  filtered_database.csv  filtered_database_reduced.csv  found_categories.csv
AudioSet/: labeling.py  utils.py
AudioSet.Data.UtilityScript/: ClassLabel2Json.py  GenerateDatasetJsonDictForMeta.py  GenerateDatasetJsonDictForSplitMetaCSV.py  SampleCleaning.py  SplitCSV.py  class_labels_indices.json
AudioSet.Downloader/: Downloader.py  Readme.md  clean.sh  data_clean  data_clean.py  diff  download_diff  downloader_configs.py  duplicate_raw_check.py  pyproject.toml  remove_long.py  splitcsv.py
AudioSet.Meta/: get_cls_idx_by_display_name.py
AudioSet.SubsetCreator/: Readme.md  create_subset.py  make_subset.py  subset_maker_config.py
AudioSet.SubsetCreator/subset_json/: description.txt  sub_eval.json  sub_train.json
AudioSet/IO/: JsonBasedAudioSet.py  __init__.py  _basic_audioset_io.py  label_embedding.py
AudioSet/transform/: transforms.py
AudioSetUnittest/: JsonBasedAudioSet.py  audio_set_transfomers.py  labeling.py  utils.py
MuxKit.AudioSet.IO.Document/: index.md  work_flow.md
