[tool.poetry]
name = "muxkitlearn-audioset-io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "muxkitlearn"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchaudio = "^2.0.2"
torchvision = "^0.15.2"
pytube = "^15.0.0"
aiohttp = "^3.9.5"
aiofiles = "^23.2.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
