[tool.poetry]
name = "audiosetdownloader"
version = "0.1.0"
description = "AudioSet Downloader"
authors = ["mux <muxxum65536@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
pandas = "^2.2.2"
aiohttp = "^3.9.5"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
